[metadata]
name = django-netbox-confluence
version = 0.1
description = A Django app to connect NetBox and Confluence Wiki.
long_description = file: README.rst
# url = https://www.example.com/
author = Hovhannes Dabaghyan
author_email = hovhannes.dabaghyan@gmail.com
license = Apache License 2.0
classifiers =
    Environment :: Web Environment
    Framework :: Django
    Framework :: Django :: 3.0
    Intended Audience :: Developers
    License :: OSI Approved :: BSD License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Topic :: Internet :: WWW/HTTP
    Topic :: Internet :: WWW/HTTP :: Dynamic Content

[options]
include_package_data = true
packages = find:
